--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,12 +7,26 @@ server:
       enabled: true
       force: true
       
+#spring:
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/security?serverTimezone=Asia/Seoul
+#    username: cos
+#    password: cos1234
+
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/security?serverTimezone=Asia/Seoul
-    username: cos
-    password: cos1234
+    #    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+#    data: classpath:data-h2.sql
+    url: jdbc:h2:mem:test;
+    #    url: jdbc:h2:~/test
+    driver-class-name: org.h2.Driver
+
+  h2:
+    console:
+      #      settings: web-allow-others=true
+      enabled: true
+    path: /h2-console
     
   mvc:
     view:
@@ -21,7 +35,10 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update #create update none
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+      ddl-auto: create #create update none
+      use-new-id-generator-mappings: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
     show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
